# skill-miner

./: .gitignore  Cargo.toml  LICENSE  README.md  domains.toml
.github/workflows/: ci.yml
prompts/: classify.txt  extract.txt  refine.txt  summarize.txt
src/: bundle.rs  classifier.rs  compressor.rs  deployer.rs  domains.rs  error.rs  extractor.rs  generator.rs  graph.rs  history.rs  lib.rs  main.rs  manifest.rs  miner.rs  parser.rs  refiner.rs  scorer.rs  sync.rs  today.rs  tool_coverage.rs  types.rs  util.rs
tests/: classifier_test.rs  compressor_test.rs  domains_test.rs  e2e_test.rs  generator_test.rs  parser_test.rs
tests/fixtures/: sample_conversation.jsonl
