[package]
name = "skill-miner"
version = "0.1.0"
edition = "2021"
description = "Extract domain knowledge from Claude Code chat history and generate agent skills"

[[bin]]
name = "skill-miner"
path = "src/main.rs"

[lib]
name = "skill_miner"
path = "src/lib.rs"

[dependencies]
cli-ai-analyzer = { path = "../cli-ai-analyzer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
