[package]
name = "skill-miner"
version = "0.1.0"
edition = "2021"
description = "Extract domain knowledge from Claude Code chat history and generate agent skills"
license = "MIT"
repository = "https://github.com/YuujiKamura/skill-miner"
keywords = ["claude-code", "skills", "ai", "knowledge-extraction", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skill-miner"
path = "src/main.rs"

[lib]
name = "skill_miner"
path = "src/lib.rs"

[dependencies]
cli-ai-analyzer = { git = "https://github.com/YuujiKamura/cli-ai-analyzer.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"
